# path-tracer

./: CMakeLists.txt  LICENSE  README.md
assets/: CornellBox.mtl  MaterialTest.mtl
src/: brdf.cpp  brdf.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  integrator.cpp  integrator.hpp  main.cpp  material.hpp  mesh.hpp  ray.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  scene.cpp  scene.hpp
